static/css/style.css
.brand-name {
    font-weight: 400;
    font-size: 1.4em;
    line-height: 1em;
    font-family: 'Lobster', cursive;
    margin-right: 12px;
}

.upper-navbar {
    width: 100%;
    background-color: #f8f8f8;
}


h1 {
    font-weight: 400;
    font-family: 'Lobster', cursive;
}

h2, h3,
.hero a {
    font-weight: 400;
    font-family: 'Molengo', sans-serif;
}

.hero a {
    background-color: #e1502f;
    color: white;
    float: right;
}

.hero a:hover {
   background-color: #86322a;
   color: white; 
}

.hero h3 {
    margin-bottom: 20px;
}


.plan-categories {
    display: none;
}

.plan-activity {
    position: relative;
    width: 180px;
    height: 140px;
    background-repeat: no-repeat;
    display: block;
    overflow: hidden;
    padding: 0 10px;
    margin: 0 20px 10px 27px;
    float: left;
}

.plan-activity.unscheduled:before {
    font-family: 'Glyphicons Halflings';
    content: "\e023";
    position: absolute;
    font-size: 60px;
    color: #ddd;
    top: 35%;
    line-height: 1em;
    margin-top: -30px;
    left: 50%;
    margin-left: -30px;
}

.plan-activity .time {
    position: absolute;
    bottom: 0px;
}

.plan-activity .time,
.plan-activity .title {
    color: rgba(255,255,255,0.9);
    text-shadow: 0 1px 2px rgba(0,0,0,0.8), 0 0 20px rgba(0,0,0,0.5);
}

.plan-activity:hover {
    text-decoration: none;
}

.toggled {
    background-color: lightblue; 
}

.activity {
    margin-top:40px;
    display:block;
}

.activity .photo {
    max-height: 140px;
    overflow-y: hidden;
}

.activity img {
    max-width:100%
}

.activity .title {
    line-height: 1;
}

.activity .body {
    color: #333;
}

.category-button {
    height: 170px;
    text-align: center;
    color: #666;
}

.category-button:hover {
    text-decoration: none;
}

.separate-button {
    font-size: 21px; 
    text-align: center;
    width: 190px;
    height: 170px; 
}

.subtitle {
    margin: 30px 0px 60px 0px; 
}

.category_name {
    margin-top: 30px; 
}

.category_name div {
    font-size: 150%;
}


.category_name img {
    margin-top: 22px; 
}


.symbol {
    margin-top: 14px; 
}

/*
.categories_together {
    max-width: 570px; 
    margin-left: 270px; 
}
*/

.turn_green:hover {
    background-color: #66E275;
    border-radius: 8px;
}

.turn_green {
    display: block;
}

.mouse_down {
    background-color: #5CA82A !important;
}


.add-button {
    margin-left: 22px; 
    margin-bottom: 14px;
    display: inline;
}


.lead-title {
    font-family: 'Molengo', sans-serif;
    font-size: 22px;
    color: black;
}

.lead-title:hover {
    color: black;
}


.lead-dv {
    min-width: 349px;
    margin-bottom: 35px;
    display: inline-block;
}


.weather-icon {
    width: 40px; 
    margin: 0px 18px;
}

body.index {
    background: url("/static/background/golden-gate-bridge-reduced.jpg") no-repeat center center fixed; 
    background-size: cover;
}

@media all and (min-width: 750px) {
    .calendar {
        margin-top: 25px;
    }
}

@media (max-width: 1200px) {
    
}

.control-label {
    font-weight: 400;
    font-family: 'Molengo', sans-serif;
    font-size: 16px;
}

#fb-face {
    margin-top: 15px;
    margin-right: 12px;
    color: #777777;
}


.post {
    margin: 60px 0px; 
}

.fb-button {
    margin-top: -60px;
}


.timeline-panel {
    margin-bottom: 8px;
}


.timeline-panel .time {
    display: inline;
    font-weight: 400;
    font-family: 'Molengo', sans-serif;
}


.timeline-panel .weather-icon {
    display: inline;
}


.timeline-panel .forecast{
    display: inline;
    font-weight: 400;
    font-family: 'Molengo', sans-serif;
}


h4 {
    font-weight: 400;
    font-family: 'Molengo', sans-serif;
}

.plan-activity {
    border-radius: 8px;
}

.create-plan {
    margin-top: 15px;
}

.create-plan:hover {
    background-color: #47a447;
}


.description {
    text-align:justify;
    text-justify:inter-word;
    font-size: 15px;
    margin-top: -12px;
}

.nav {
    font-size: 18px;
}

.panel-default {
    margin-top: 15px;
}

.categories {
    margin-bottom: 25px;
}


.category-image {
    margin-top: 30px;
}

.days-travel {
    margin-bottom: 30px;
}


img .google-link {
    width:20px;
    height: 20px;
}



.hero {
    background-color: #e7e7e7;
} 

